# simple-calculator

./: CMakeLists.txt  ONP.sln
ONP/: Base.cpp  Base.h  Brackets.h  Exception.h  Functions.cpp  Functions.h  Main.cpp  Numbers.cpp  Numbers.h  ONP.cpp  ONP.h  ONP.vcxproj  ONP.vcxproj.filters  Operators.cpp  Operators.h
